--- a/_config.yml
+++ b/_config.yml
@@ -158,9 +158,8 @@ footer:
 # Reading Files
 include:
   - .htaccess
-  - _pages
-  
-exclude:
+  - ["_pages"]
+  exclude:
   - "*.sublime-project"
   - "*.sublime-workspace"
   - vendor
