--- a/_config.yml
+++ b/_config.yml
@@ -293,3 +293,11 @@ defaults:
       comments: # true
       share: true
       related: true
+  #_pages
+  - scope:
+      paths: ""
+      type: pages
+    values:
+      layout: single
+      author_profile: true
+      
