--- a/_config.yml
+++ b/_config.yml
@@ -15,18 +15,18 @@
 minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 # Site Settings
-locale                   : "en-US"
-title                    : "Site Title"
+locale                   : "fr-FR"
+title                    : "Céline Trinquet"
 title_separator          : "-"
-subtitle                 : # site tagline that appears below site title in masthead
-name                     : "Your Name"
-description              : "An amazing website."
-url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+subtitle                 : "Art" # site tagline that appears below site title in masthead
+name                     : "Céline Trinquet"
+description              : "Céline Trinquet Portofolio Art: Ceramiques & Dessins"
+url                      : "https://celinetrinquet.github.io"# the base hostname & protocol for your site e.g. https://mmistakes.github.io
 baseurl                  : # the subpath of your site, e.g. "/blog"
-repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
+repository               : "celinetrinquet/celinetrinquet.github.io" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
-logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
-masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
+logo                     : "/assets/images/logo.png"# path of logo image to display in the masthead, e.g. /assets/images/88x88.png
+masthead_title           : "Céline Trinquet Art"# overrides the website title displayed in the masthead, use " " for no title
 # breadcrumbs            : false # true, false (default)
 words_per_minute         : 200
 comments:
@@ -111,7 +111,7 @@ author:
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "I am an **amazing** person."
   location         : "Paris"
-  email            :
+  email            : "celinetrinquet.art@gmail.com"
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
@@ -295,9 +295,15 @@ defaults:
       related: true
   #_pages
   - scope:
-      paths: ""
+      path: ""
       type: pages
     values:
       layout: single
       author_profile: true
+    # _foo
+  - scope:
+      path: ""
+      type: foo
+    values:
+      layout: single
       
