--- a/_config.yml
+++ b/_config.yml
@@ -16,10 +16,10 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 
 # Site Settings
 locale                   : "fr-FR"
-title                    : "Céline Trinquet"
+title                    : "Trinquet"
 title_separator          : "-"
 subtitle                 : "Art" # site tagline that appears below site title in masthead
-name                     : "Céline Trinquet"
+name                     : "Trinquet"
 description              : "Céline Trinquet Portofolio Art: Ceramiques & Dessins"
 url                      : "https://celinetrinquet.github.io"# the base hostname & protocol for your site e.g. https://mmistakes.github.io
 baseurl                  : # the subpath of your site, e.g. "/blog"
