--- a/_config.yml
+++ b/_config.yml
@@ -16,17 +16,17 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 
 # Site Settings
 locale                   : "fr-FR"
-title                    : "Trinquet"
+title                    : "Céline Trinquet"
 title_separator          : "-"
 subtitle                 : "Art" # site tagline that appears below site title in masthead
-name                     : "Trinquet"
+name                     : "Céline Trinquet"
 description              : "Céline Trinquet Portofolio Art: Ceramiques & Dessins"
 url                      : "https://celinetrinquet.github.io"# the base hostname & protocol for your site e.g. https://mmistakes.github.io
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : "celinetrinquet/celinetrinquet.github.io" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : "/assets/images/logo2.png"# path of logo image to display in the masthead, e.g. /assets/images/88x88.png
-masthead_title           : "Céline Trinquet Art"# overrides the website title displayed in the masthead, use " " for no title
+masthead_title           : "Céline Trinquet"# overrides the website title displayed in the masthead, use " " for no title
 # breadcrumbs            : false # true, false (default)
 words_per_minute         : 200
 comments:
