--- a/_config.yml
+++ b/_config.yml
@@ -18,14 +18,14 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 locale                   : "fr-FR"
 title                    : "Céline Trinquet"
 title_separator          : "-"
-subtitle                 : "Art" # site tagline that appears below site title in masthead
-name                     : "Céline Trinquet"
+subtitle                 : "" # site tagline that appears below site title in masthead
+name                     : "Céline"
 description              : "Céline Trinquet Portofolio Art: Ceramiques & Dessins"
 url                      : "https://celinetrinquet.github.io"# the base hostname & protocol for your site e.g. https://mmistakes.github.io
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : "celinetrinquet/celinetrinquet.github.io" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
-logo                     : "/assets/images/logo2.png"# path of logo image to display in the masthead, e.g. /assets/images/88x88.png
+logo                     : # path of logo image to display in the masthead, e.g. /assets/images/88x88.png
 masthead_title           : "Céline Trinquet"# overrides the website title displayed in the masthead, use " " for no title
 # breadcrumbs            : false # true, false (default)
 words_per_minute         : 200
@@ -107,7 +107,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Céline Trinquet"
+  name             : "Céline"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "I am an **amazing** person."
   location         : "Paris"
@@ -280,6 +280,10 @@ compress_html:
   ignore:
     envs: development
 
+collections:
+  portfolio:
+    output: true
+    permalink: /:collection/:path/
 
 # Defaults
 defaults:
@@ -294,17 +298,31 @@ defaults:
       comments: # true
       share: true
       related: true
-  #_pages
+
+defaults:
+  # _pages
   - scope:
       path: ""
       type: pages
     values:
       layout: single
       author_profile: true
-    # _foo
+
+defaults:
+  # _foo
   - scope:
       path: ""
       type: foo
     values:
       layout: single
+      
+defaults:
+  # _portfolio
+  - scope:
+      path: ""
+      type: portfolio
+    values:
+      layout: single
+      author_profile: false
+      share: true
       
